# psect

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/hooks/: format-rust.sh
.github/workflows/: ci.yml
crates/git-psect/: Cargo.toml
crates/git-psect/src/: candidates.rs  error.rs  lib.rs  main.rs  repo.rs  state.rs
crates/git-psect/src/commands/: mod.rs  new.rs  old.rs  pass_fail.rs  reset.rs  run.rs  session.rs  set_prior.rs  start.rs  state_cmd.rs
crates/git-psect/tests/: git_integration.rs
crates/psect-core/: Cargo.toml
crates/psect-core/src/: distribution.rs  lib.rs  regression.rs
crates/psect-core/tests/: integration_test.rs
src/: lib.rs  main.rs
