[package]
name = "git-psect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "git-psect"
path = "src/main.rs"

[dependencies]
psect-core = { path = "../psect-core" }
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
git2 = "0.20.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
